2005-12-06 Kimmo
 PATCH: [ 1372589 ] Document tildas in config
  Submitted by Perry
  Src: ConfigLog.cpp
 PATCH: [ 1373037 ] Fix filter dialog to correctly add new filters
  Submitted by Perry
  Src: FileFiltersDlg.cpp

2005-12-04 Perry
 PATCH: [ 1372974 ] Make local function "GuessEncoding_from_bytes" static
  Src: codepage_detect.cpp
 PATCH: [ 1368762 ] Fix assignment in DirScan_GetItems
  Also add explanatory comment, for what variable does.
  Src: DirScan.cpp

2005-12-04 Jochen
 CMarkdown::FileImage::GuessByteOrder(), GuessCodepageEncoding(): Fix UTF-8 signature detection
 CMarkdown::GetTagName(): Strip bogus trailing slash in name of empty tag
  Src: markdown.cpp codepage_detect.cpp

2005-12-03 Perry
 PATCH: [ 1335128 ] Ignore uninstalled codepages
  Src: MergeDoc.cpp MergeDoc.h codepage.cpp codepage_detect.cpp
  Src/Common: unicoder.cpp

2005-12-02 Kimmo
 PATCH: [ 1358408 ] Import and export for options
  Increase buffer size
  Src/Common: OptionsMgr.cpp

2005-12-02 Perry
 PATCH: [ 1369660 ] Delete unused variables m_msgUpdateStatus
  Cosmetic cleanup
  Src: DirDoc.cpp DiffContext.cpp DiffContext.h DiffThread.cpp
   DiffThread.h

2005-11-30 Perry
 PATCH: [ 1369657 ] Delete unused variable DiffFuncStruct::msgStatusUpdate
  Src: DiffThread.cpp
 BUG: [ 1369856 ] Crashed when interface language is changed
  Src: DirDoc.cpp
 BUG: [ 1368755 ] Want comment on format line in 7ZCommon.cpp
  Cosmetic: adding explanatory comment to Merge7z::Proxy::operator->
  Src: 7zCommon.cpp

2005-11-30 Kimmo
 PATCH: [ 1369544 ] Catalan translation update
  Submitted by Jordi Vilar
  Docs/Users/Languages: ReadMe-Catalan.txt
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1265295 ] Swap file compare panes (use pointers for buffers)
  Forgot to update resource.h in language folders
  Src/Languages: resource.h

2005-11-30 Perry
 Cosmetic: add comment to DiffThread giving value of msgID variable
  (to help debugging).
  Src: DiffThread.cpp

2005-11-28 Perry